# ai-project-template

./: .env.development  .env.example  .gitignore  .npmignore  CHAT_APP_README.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  TOOL_APPROVAL_FLOW.md  azure.yaml  conftest.py  content_processing.md  docker-compose.yml  package.json  pyproject.toml  pytest.ini
.github/: PROJECT-ANALYSIS.md  SIMPLIFIED-TEMPLATE.md
.github/agents/: copilot-instructions.md
.github/workflows/: build.yml  lint.yml  test.yml
.specify/memory/: constitution.md
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/src/: dependencies.py  main.py  middleware.py
apps/api/src/api/: __init__.py  config.py  dependencies.py  main.py  middleware.py
apps/api/src/api/models/: chat.py  health.py  user.py
apps/api/src/api/routes/: __init__.py  chat.py  content_processing.py  health.py  user.py
apps/api/src/api/services/: __init__.py  chat_service.py  chat_store.py  cosmos_db_init.py  file_processor.py  foundry_client.py  tool_registry.py  user_service.py
apps/api/src/routes/: __init__.py  health.py
apps/api/tests/: __init__.py  conftest.py  test_health.py
apps/common/: pyproject.toml
apps/common-py/: pyproject.toml
apps/common-py/src/common/: __init__.py
apps/common-py/src/common/config/: __init__.py  document_config.py
apps/common-py/src/common/infra/: __init__.py
apps/common-py/src/common/infra/cosmos/: __init__.py  cosmos_base.py  cosmos_metadata_client.py
apps/common-py/src/common/infra/http/: __init__.py  cu_client.py
apps/common-py/src/common/infra/openai/: __init__.py  openai_client.py
apps/common-py/src/common/infra/storage/: __init__.py  blob_client.py
apps/common-py/src/common/models/: __init__.py  chat.py  comparison.py  content_understanding.py  document.py  model.py  user.py
apps/common-py/src/common/schemas/: __init__.py  invoice_schema.py
apps/common-py/src/common/services/: __init__.py  chat_store.py  confidence.py  content_processing_orchestrator.py  cosmos_metadata_store.py  cu_record_store.py  file_storage.py  instructions.py  pipeline_orchestrator.py  user_service.py
apps/common-py/src/common/services/cu/: __init__.py  content_understanding_confidence_evaluator.py  cu_extractor.py
apps/common-py/src/common/services/evidence/: __init__.py  evidence_mapper.py
apps/common-py/src/common/services/image/: __init__.py  image_utils.py
apps/common-py/src/common/services/openai/: __init__.py  confidence_evaluator.py  schema_extractor.py
apps/common-py/src/common/services/pdf/: __init__.py  pdf_image_converter.py
apps/common-py/tests/: conftest.py  test_cu_client_integration.py  test_foundry_responses_api.py
apps/functions/: .gitignore  Dockerfile  README.md  function_app.py  pyproject.toml
apps/functions/src/: __init__.py
apps/functions/src/functions/: __init__.py
apps/ui/: .env.example  .gitignore  Dockerfile  ENV_CONFIG.md  generate-env-config.sh  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/ui-lib/: .eslintrc.json  .npmignore  .prettierignore  CHANGELOG.md  README.md  package.json  tsconfig.json  tsup.config.ts  vite.config.ts  vitest.config.ts
apps/ui-lib/scripts/: copy-css.js
apps/ui-lib/src/: index.ts  style.css  vite-env.d.ts
apps/ui-lib/src/api/: apiClient.ts  chatApi.ts  config.ts  contentProcessingApi.ts  fileApi.ts  healthApi.ts  index.ts  runApi.ts
apps/ui-lib/src/components/: Button.css  Button.tsx  ChatShell.css  ChatShell.tsx  Composer.css  Composer.tsx  FieldDetailsPanel.css  FieldDetailsPanel.tsx  FieldsListPanel.css  FieldsListPanel.tsx  FileUploadButton.css  FileUploadButton.tsx  MessageBubble.css  MessageBubble.tsx  MessageList.css  MessageList.tsx  PDFViewer.css  PageControls.css  PageControls.tsx  ParameterInputForm.css  ParameterInputForm.tsx  PdfViewer.tsx  SchemaPanel.css  SchemaPanel.tsx  SimplePdfViewer.tsx  Toast.css  Toast.tsx  ToolApprovalModal.css  ToolApprovalModal.tsx  index.ts
apps/ui-lib/src/types/: api.types.ts  chat.types.ts  index.ts
apps/ui-lib/src/utils/: pdfCoordinates.ts  pdfRenderer.ts
apps/ui-lib/tests/components/: Button.test.tsx
apps/ui/public/: env-config.js
apps/ui/src/: App.tsx
apps/ui/src/__tests__/components/: Button.test.tsx
apps/ui/src/__tests__/pages/: Home.test.tsx
apps/ui/src/components/common/: Button.tsx  Card.tsx  UserList.tsx  navItems.ts
apps/ui/src/components/layout/: Header.tsx  Sidebar.tsx
apps/ui/src/hooks/: useApi.ts
apps/ui/src/pages/: Agents.tsx  Catalog.tsx  Chat.css  Chat.tsx  Content.tsx  ContentProcessing.css  ContentProcessing.tsx  Home.tsx  Settings.css  Settings.tsx
apps/ui/src/services/: api-client.ts
apps/ui/src/styles/: index.css
apps/ui/src/types/: index.ts
apps/ui/src/utils/: pdfWorkerSetup.ts
hooks/: postdeploy.ps1  predeploy.ps1  ui-postdeploy.ps1
infra/: README.md  api.bicep  api.parameters.json  functions.bicep  functions.parameters.json  main.bicep  main.parameters.json  ui.bicep  ui.parameters.json
infra/modules/: ai-services.bicep  container-app.bicep  container-registry.bicep  cosmos-db.bicep  key-vault.bicep  storage-account.bicep
scripts/: postdeploy.ps1  predeploy.ps1  ui-postdeploy.ps1  write_env.ps1
specs/001-fastapi-react-monorepo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fastapi-react-monorepo/checklists/: requirements.md
specs/001-fastapi-react-monorepo/contracts/: Dockerfile.api  Dockerfile.functions  Dockerfile.ui  azure.yaml  docker-compose.yml  openapi.yaml  package.json.root  package.json.ui  pyproject.toml.api  pyproject.toml.common  pyproject.toml.functions  pyproject.toml.root
