[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-api"
version = "0.1.0"
description = "Agentic AI - FastAPI backend service"
authors = [{name = "Agentic AI Team"}]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.3.0",
    "azure-cosmos>=4.5.0",
    "azure-servicebus>=7.11.0",
    "azure-identity>=1.14.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.25.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I", "N", "UP", "RUF"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
